@startuml

class Ball 

class Plateform

class CollisionManager<Shape>

class Game<Shape>

enum Color

class ColorUtils

class InputParser

class Grid<Shape>

interface Cell<Shape>

class Brick<Shape>
class Empty<Shape>
class Wall <Shape>
Cell <|-- Brick
Cell <|-- Empty
Cell <|-- Wall 

class BasicBrick<Shape>
abstract class SpecialBrick<Derived, Shape>
Brick <|-- BasicBrick
Brick <|-- SpecialBrick

class BonusBrick<Shape>
class MalusBrick<Shape>
SpecialBrick <|-- BonusBrick
SpecialBrick <|-- MalusBrick

class SlowedDownBrick<Shape>
class EnlargeBrick<Shape>
BonusBrick <|-- EnlargeBrick 
BonusBrick <|-- SlowedDownBrick

class ShrinkBrick<Shape>
class SpedUpBrick<Shape>
MalusBrick <|-- SpedUpBrick 
MalusBrick <|-- ShrinkBrick 

abstract class BonusMalus<Shape>
class MultiBall<Shape>
class Enlarge<Shape>
class Shrink<Shape>
class SlowedDown<Shape>
class SpedUp<Shape>

BonusMalus <|-- MultiBall 
BonusMalus <|-- Enlarge 
BonusMalus <|-- Shrink 
BonusMalus <|-- SlowedDown 
BonusMalus <|-- SpedUp 
 

class SquareCell
class TriangleCell
class HexagonCell

@enduml